--- a/wwwroot/css/app.css
+++ b/wwwroot/css/app.css
@@ -38,7 +38,20 @@ a, .btn-link {
 }
 
 .content {
-    padding-top: 1.1rem;
+    padding-top: 1.1rem; 
+}
+
+.day{
+    text-align: justify;
+    width: 700px;
+    margin: 0 auto;
+    color: #F5EED7;
+    background-color: #151515;
+    border: 1px solid #F5EED7;
+    border-radius: 20px;
+    height: 500px;
+    padding:1.5em;
+    overflow-y: scroll;
 }
 
 .valid.modified:not([type=checkbox]) {
@@ -94,4 +107,12 @@ a, .btn-link {
 
 canvas {
     border: 1px solid black;
+}
+
+code{
+    background-color: rgb(0, 0, 0, .2);
+    width: 100%;
+    padding:10px;
+    display: block;
+    border-radius: 10px;
 }
