Reduced intensity of snow effect

--- a/Pages/DayCode.razor
+++ b/Pages/DayCode.razor
@@ -1,5 +1,6 @@
 @inject HttpClient Http;
 @inject IJSRuntime JS;
+@inject NavigationManager NavigationManager
 
 <pre class="prettyprint linenums">
     @((MarkupString)dayCode)
@@ -11,7 +12,9 @@
 
     protected override async Task OnInitializedAsync()
     {
-        await Http.GetStringAsync("Code/Day1.razor.md").ContinueWith((str) =>
+        var pageName = NavigationManager.ToBaseRelativePath(NavigationManager.Uri);
+
+        await Http.GetStringAsync($"Code/{pageName}.razor.md").ContinueWith((str) =>
         {
             dayCode = str.Result;
         });
