--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -1,7 +1,7 @@
 ﻿@page "/"
 @inject AdventOfCodeBlazor.Services.IDayApi DayApi
 
-<PageTitle>Calendar</PageTitle>
+<PageTitle>Advent of Code 2021</PageTitle>
 
 
 <div class="advent-calendar">
