--- a/Shared/MainLayout.razor
+++ b/Shared/MainLayout.razor
@@ -2,7 +2,7 @@
 
 <div class="page">
     <main>
-        <h1 class="text-center">Advent of Code 2021</h1>
+        <a class="home-link" href="/"><h1 class="text-center">Advent of Code 2021</h1></a>
 
         <article class="content px-4">
             @Body
