Added loading spinner

--- a/Pages/Day1.razor
+++ b/Pages/Day1.razor
@@ -1,17 +1,9 @@
 @page "/Day1"
 
+<PageTitle>@MainLayout.SiteTitle("Day 1")</PageTitle>
+
 <div class="day" data-simplebar>
     <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean efficitur, nulla eu rutrum vulputate, diam
-        ligula fringilla nibh, vitae suscipit ipsum metus et dui. Cras porta tempus risus eget vulputate. Donec at metus
-        et quam varius vestibulum. Morbi lacinia feugiat risus at vestibulum. Maecenas est lacus, ullamcorper vitae
-        ligula at, aliquam mollis leo. Aenean dapibus sollicitudin lacus, a sodales libero semper nec. In rhoncus tellus
-        vel mi egestas tristique. Nunc semper enim sit amet est iaculis sollicitudin.
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean efficitur, nulla eu rutrum vulputate, diam
-        ligula fringilla nibh, vitae suscipit ipsum metus et dui. Cras porta tempus risus eget vulputate. Donec at metus
-        et quam varius vestibulum. Morbi lacinia feugiat risus at vestibulum. Maecenas est lacus, ullamcorper vitae
-        ligula at, aliquam mollis leo. Aenean dapibus sollicitudin lacus, a sodales libero semper nec. In rhoncus tellus
-        vel mi egestas tristique. Nunc semper enim sit amet est iaculis sollicitudin.
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean efficitur, nulla eu rutrum vulputate, diam
         ligula fringilla nibh, vitae suscipit ipsum metus et dui. Cras porta tempus risus eget vulputate. Donec at metus
         et quam varius vestibulum. Morbi lacinia feugiat risus at vestibulum. Maecenas est lacus, ullamcorper vitae
