--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -1,8 +1,7 @@
 ﻿@page "/"
 @inject AdventOfCodeBlazor.Services.IDayApi DayApi
 
-<PageTitle>Advent of Code 2021</PageTitle>
-
+<PageTitle>@MainLayout.SiteTitle()</PageTitle>
 
 <div class="advent-calendar">
 
