--- a/Shared/MainLayout.razor
+++ b/Shared/MainLayout.razor
@@ -1,11 +1,22 @@
 ﻿@inherits LayoutComponentBase
 
+
 <div class="page">
     <main>
-        <a class="home-link" href=""><h1 class="text-center">Advent of Code 2021</h1></a>
+        <a class="home-link" href="">
+            <h1 class="text-center">Advent of Code 2021</h1>
+        </a>
 
         <article class="content px-4">
             @Body
         </article>
     </main>
 </div>
+
+
+@code {
+    public static string SiteTitle(string page = "") {
+        
+        return "Advent of Code 2021" + (string.IsNullOrEmpty(page) ? "" : $" - {page}");
+    }
+}
