Added Gihub and AoC links

--- a/Shared/MainLayout.razor
+++ b/Shared/MainLayout.razor
@@ -5,7 +5,15 @@
     <main>
         <a class="home-link" href="">
             <h1 class="text-center">Advent of Code 2021</h1>
+           
         </a>
+
+         <div class="site-links text-center">
+                <a href="https://github.com/Manlibear/">Manlibear's Github</a>
+                &nbsp;&nbsp;
+                &nbsp;&nbsp;
+                <a href="https://adventofcode.com/">Advent of Code</a>
+            </div>
 
         <article class="content px-4">
             @Body
