Day 1 part 1 solution

--- a/Pages/Day1.razor
+++ b/Pages/Day1.razor
@@ -1,29 +1,34 @@
 @page "/Day1"
+@inject AdventOfCodeBlazor.Services.IDayApi DayApi
 
 <PageTitle>@MainLayout.SiteTitle("Day 1")</PageTitle>
 
 <div class="day" data-simplebar>
-    <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean efficitur, nulla eu rutrum vulputate, diam
-        ligula fringilla nibh, vitae suscipit ipsum metus et dui. Cras porta tempus risus eget vulputate. Donec at metus
-        et quam varius vestibulum. Morbi lacinia feugiat risus at vestibulum. Maecenas est lacus, ullamcorper vitae
-        ligula at, aliquam mollis leo. Aenean dapibus sollicitudin lacus, a sodales libero semper nec. In rhoncus tellus
-        vel mi egestas tristique. Nunc semper enim sit amet est iaculis sollicitudin.
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean efficitur, nulla eu rutrum vulputate, diam
-        ligula fringilla nibh, vitae suscipit ipsum metus et dui. Cras porta tempus risus eget vulputate. Donec at metus
-        et quam varius vestibulum. Morbi lacinia feugiat risus at vestibulum. Maecenas est lacus, ullamcorper vitae
-        ligula at, aliquam mollis leo. Aenean dapibus sollicitudin lacus, a sodales libero semper nec. In rhoncus tellus
-        vel mi egestas tristique. Nunc semper enim sit amet est iaculis sollicitudin.
-    </p>
-
-    <h2>Answer: @Anwser()</h2>
+    <h2>Answer: @answer</h2>
     <DayCode />
 </div>
 
 
 @code
 {
-    string Anwser(){
-        return (1 + 1).ToString();
+    string answer = "";
+    protected override async Task OnInitializedAsync()
+    {
+        await DayApi.GetDayInput(1).ContinueWith((str) =>
+       {
+           int? prev = null;
+           int larger = 0;
+           foreach (var l in str.Result.Split("\n"))
+           {
+               int x = int.Parse(l);
+               if (prev.HasValue && prev.Value < x)
+               {
+                   larger++;
+               }
+               prev = x;
+           }
+
+           answer = larger.ToString();
+       });
     }
 }
