--- a/Shared/MainLayout.razor
+++ b/Shared/MainLayout.razor
@@ -10,8 +10,8 @@
 
          <div class="site-links text-center">
                 <a href="https://github.com/Manlibear/">Manlibear's Github</a>
-                &nbsp;&nbsp;
-                &nbsp;&nbsp;
+                &nbsp;
+                &nbsp;
                 <a href="https://adventofcode.com/">Advent of Code</a>
             </div>
 
