--- a/Pages/Day1.razor
+++ b/Pages/Day1.razor
@@ -4,31 +4,56 @@
 <PageTitle>@MainLayout.SiteTitle("Day 1")</PageTitle>
 
 <div class="day" data-simplebar>
-    <h2>Answer: @answer</h2>
+    <div class="row">
+        <div class="col-md-6">
+            <h2>Part 1: @answer1</h2>
+        </div>
+        <div class="col-md-6">
+            <h2>Part 2: @answer2</h2>
+        </div>
+    </div>
     <DayCode />
 </div>
 
 
 @code
 {
-    string answer = "";
+    string answer1 = "";
+    string answer2 = "";
+
     protected override async Task OnInitializedAsync()
     {
         await DayApi.GetDayInput(1).ContinueWith((str) =>
-       {
-           int? prev = null;
-           int larger = 0;
-           foreach (var l in str.Result.Split("\n"))
-           {
-               int x = int.Parse(l);
-               if (prev.HasValue && prev.Value < x)
-               {
-                   larger++;
-               }
-               prev = x;
-           }
+        {
+            int larger1 = 0;
+            int larger2 = 0;
 
-           answer = larger.ToString();
-       });
+            var lines = str.Result.Split("\n");
+            for (int i = 0; i < lines.Length; i++)
+            {
+                int x = int.Parse(lines[i]);
+                if (i > 0 && int.Parse(lines[i - 1]) < x)
+                {
+                    larger1++;
+                }
+
+                if (i > 2)
+                {
+                    var thisGroup = int.Parse(lines[i]) + 
+                                    int.Parse(lines[i - 1]) + 
+                                    int.Parse(lines[i - 2]);
+
+                    var lastGroup = int.Parse(lines[i - 1]) + 
+                                    int.Parse(lines[i - 2]) + 
+                                    int.Parse(lines[i - 3]);
+
+                    if (thisGroup > lastGroup)
+                        larger2++;
+                }
+            }
+
+            answer1 = larger1.ToString();
+            answer2 = larger2.ToString();
+        });
     }
 }
