--- a/Pages/Day3.razor
+++ b/Pages/Day3.razor
@@ -27,48 +27,41 @@
         string epsilon = "";
         // most common
         string gamma = "";
+        var oxygen = "";
+        var co2 = "";
 
         await DayApi.GetDayInput(3).ContinueWith((str) =>
         {
-            var lines = str.Result.Split("\n");
+            var lines = str.Result.Split("\n").ToList();
+            var linesOxy = str.Result.Split("\n").ToList();
+            var linesCo2 = str.Result.Split("\n").ToList();
 
-            char[,] cols = new char[lines[0].Length, lines.Count()];
-
-            // first get the data in columns rather than rows
-            for (int i = 0; i < lines.Count(); i++)
-            {
-                for (int j = 0; j < lines[i].Length; j++)
-                {
-                    cols[j, i] = lines[i][j];
-                }
-            }
-
-            // count the zeroes in each column
-            int[] zeroCount = new int[cols.GetLength(0) - 1];
-            for (int y = 0; y < cols.GetLength(0); y++)
-            {
-                for (int x = 0; x < cols.GetLength(1); x++)
-                {
-                    if (cols[y, x] == '0')
-                        zeroCount[y]++;
-                }
-            }
-
+            var lineLength = lines[0].Length - 1;
             // if there are more zeroes than half of the length of input, then it's the most common
-            int halfCount  = (cols.GetLength(1) / 2);
-            foreach (var z in zeroCount)
+            int halfCount = (lines.Count() / 2);
+
+            for (int c = 0; c < lineLength; c++)
             {
-                Console.Write(z.ToString() + ",");
+                // count the zeroes in each column, seperately for oxygen and co2 levels
+                var z = lines.Count(x => x[c] == '0');
+                var zO = linesOxy.Count(x => x[c] == '0');
+                var zC = linesCo2.Count(x => x[c] == '0');
 
                 gamma += (z > halfCount ? "0" : "1");
-                // epsilon is the opposite of gamma
+                // epsilon is simply inverse gamma
                 epsilon += gamma.Last() == '0' ? "1" : "0";
+
+                // if we still have multiple oxygen values left to filter, pick the most common, otherwise just use the current
+                oxygen += linesOxy.Count() > 1 ? (zO > (linesOxy.Count() / 2) ? "0" : "1") : linesOxy.First()[c];
+                linesOxy = linesOxy.Where(x => x.StartsWith(oxygen)).ToList();
+
+                //... same as above, but differing rules
+                co2 += linesCo2.Count() > 1 ? (zC <= (linesCo2.Count() / 2) ? "0" : "1") : linesCo2.First()[c];
+                linesCo2 = linesCo2.Where(x => x.StartsWith(co2)).ToList();
             }
 
-            var gammaInt = Convert.ToInt32(gamma, 2);
-            var epsilonInt = Convert.ToInt32(epsilon, 2);
-
-            answer1 = (gammaInt * epsilonInt).ToString();
+            answer1 = (Convert.ToInt32(gamma, 2) * Convert.ToInt32(epsilon, 2)).ToString();
+            answer2 = (Convert.ToInt32(oxygen, 2) * Convert.ToInt32(co2, 2)).ToString();
         });
     }
 }
