--- a/Pages/Day8.razor
+++ b/Pages/Day8.razor
@@ -25,13 +25,13 @@
         await DayApi.GetDayInput(8).ContinueWith((str) =>
         {
             var lines = str.Result.Split("\n").Select(x =>
-    {
-    var parts = x.Split(" | ");
-    return new
-    {
-        Input = parts[0].Trim().Replace("\n", "").Split(" "),
-        Output = parts[1].Trim().Replace("\n", "").Split(" ")
-    };
+            {
+                var parts = x.Split(" | ");
+                return new
+                {
+                    Input = parts[0].Trim().Replace("\n", "").Split(" "),
+                    Output = parts[1].Trim().Replace("\n", "").Split(" ")
+                };
             }).ToDictionary(x => x.Input, x => x.Output);
 
             Dictionary<int, int> numLookup = new Dictionary<int, int>() { { 2, 1 }, { 3, 7 }, { 4, 4 }, { 7, 8 } };
@@ -51,14 +51,9 @@
                     if (numLookup.ContainsKey(o.Length))
                         known++;
 
-                    var parsed = disp.Read(o).ToString();
-
-                    @* Console.WriteLine($"{o} -> {parsed}"); *@
-
-                    sInt += parsed;
+                    sInt += disp.Read(o).ToString();
                 }
 
-                Console.WriteLine($"{string.Join(' ', l.Value)} -> {sInt}");
                 sum += int.Parse(sInt);
             }
 
@@ -71,7 +66,6 @@
     {
         string[] parsed = new string[10];
 
-        // Determine a known number, mapping the length to winding order
         public void Parse(string[] s)
         {
             var grouped = s.GroupBy(x => x.Length);
@@ -81,7 +75,7 @@
             var four = grouped.First(x => x.Key == 4).First();
             var seven = grouped.First(x => x.Key == 3).First();
             var eight = grouped.First(x => x.Key == 7).First();
-
+            //.. and groups of length
             var sixChars = grouped.First(x => x.Key == 6);
             var fiveChars = grouped.First(x => x.Key == 5);
 
@@ -106,11 +100,6 @@
             var two = fiveChars.First();
 
             parsed = new string[10] { zero, one, two, three, four, five, six, seven, eight, nine };
-            @*
-                foreach (var p in parsed)
-                Console.Write($"{p},");
-
-                Console.WriteLine(); *@
         }
 
         private char RemoveSegments(string a, string b)
